test/libsolidity/syntaxTests/literalSuffixes/parameters/overloading_on_suffix_only.sol
function s(uint) pure suffix returns (uint) {}
function s(uint) pure returns (uint) {}
// ----
// DeclarationError 1686: (0-46): Function with same name and parameter types defined twice.
